# tree-sitter-netlinx

./: .editorconfig  .gitignore  .lintstagedrc.json  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  directives.js  go.mod  grammar.js  keywords.js  netlinx.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-netlinx.h  tree-sitter-netlinx.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_netlinx/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNetlinxTests/: TreeSitterNetlinxTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/hightlight/: main.axs
